# halogen-blog

./: .gitignore  README.md  blog.md  cabal.project  package.json  run_example
config/: webpack.config.js
dev/: index.html
example1/: example1.cabal  install_handler.js  run.sh
example1/app/: Main.hs
example2/: example2.cabal  run.sh
example2-workaround/: example2-workaround.cabal  run.sh
example2-workaround/app/: Main.hs
example2-workaround/assets/: index.js  style.scss  webpack.config.js
example2-workaround/src/: Button.externs.js  Button.hs  Button.js
example2/assets/: index.js  style.scss  webpack.config.js
example2/src/: Button.hs  Button.js
screenshots/: button.mov  material-button.mov
